# scantailor-pdf

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  COPYING  ProjectReader.cpp  RelinkablePathVisualization.cpp  Ubuntu.md
acceleration/: CMakeLists.txt  acceleration_config.h
acceleration/opencl/: CMakeLists.txt
cmake/: SetDefaultGccFlags.cmake  default_cxxflags.cmake
cmake/modules/: FindOpenJPEG.cmake  FindZLIB.cmake
dewarping/: CMakeLists.txt  dewarping_config.h
extern-patches/: readme.txt
extern-patches/jpeg-extern/: CMakeLists.txt
extern-patches/lzma-extern/: CMakeLists-shared.txt  CMakeLists-static.txt
extern-patches/podofo/: CMakeLists.txt
extern-patches/qt5-base-extern/: configure.json
extern-patches/tiff/: TiffTargets.cmake
extern-patches/tiff-extern/: CMakeLists.txt
filters/deskew/: DewarpingView.cpp
filters/output/: CMakeLists.txt  PictureZoneEditor.cpp  Task.cpp
filters/page_layout/: ImageView.cpp
foundation/: CMakeLists.txt  foundation_config.h
imageproc/: CMakeLists.txt
imageproc/tests/: CMakeLists.txt  TestBinaryImage.cpp  TestColorMixer.cpp  TestConnCompEraserExt.cpp  TestGrayscale.cpp  TestHoughTransform.cpp  TestPolygonRasterizer.cpp  TestRastLineFinder.cpp  TestRasterOp.cpp  TestShear.cpp  TestSlicedHistogram.cpp
interaction/: CMakeLists.txt
math/: CMakeLists.txt
packaging/windows/build_deps/: CMakeLists.txt
src/: CmakeLists.txt
src/acceleration/: CMakeLists.txt
src/acceleration/opencl/: BinaryFill.h  BinaryRasterOp.h  CMakeLists.txt  Copy.h  HitMissTransform.h  OpenCLAcceleratedOperations.h  OpenCLAffineTransform.cpp  OpenCLAffineTransform.h  OpenCLDewarp.cpp  OpenCLDewarp.h  OpenCLGaussBlur.cpp  OpenCLGaussBlur.h  OpenCLGrid.h  OpenCLPlugin.h  OpenCLSavGolFilter.h  OpenCLTextFilterBank.h  RenderPolynomialSurface.h  Transpose.h  Utils.h
src/acceleration/opencl/khronos/: opencl.hpp
src/acceleration/opencl/khronos/CL/: cl_d3d11.h  cl_dx9_media_sharing.h  cl_ext.h  cl_icd.h  cl_platform.h  cl_va_api_media_sharing_intel.h
src/acceleration/opencl/tests/: CMakeLists.txt  TestAffineTransform.cpp  TestBinaryFill.cpp  TestBinaryRasterOp.cpp  TestCopy.cpp  TestDewarp.cpp  TestGaussBlur.cpp  TestHitMissTransform.cpp  TestRenderPolynomialSurface.cpp  TestSavGolFilter.cpp  TestTranspose.cpp  Utils.h
src/app/: CMakeLists.txt  CmakeLists.txt  MainWindow.cpp  RelinkablePathVisualization.cpp  main.cpp
src/app_cli/: CMakeLists.txt  CmakeLists.txt
src/core/: AutoManualMode.h  BackgroundTask.h  CmakeLists.txt  CommandLine.cpp  ImageLoader.cpp  ImageLoader.h  ImageMetadataLoader.cpp  ImageMetadataLoader.h  ImageViewBase.cpp  ImageViewBase.h  JP2MetadataLoader.cpp  JP2MetadataLoader.h  JP2Reader.cpp  JP2Reader.h  JpegMetadataLoader.cpp  JpegMetadataLoader.h  PdfReader.cpp  PngMetadataLoader.cpp  PngMetadataLoader.h  ProjectWriter.cpp  RelinkablePath.cpp  TiffMetadataLoader.cpp  (+4 more)
src/crash_reporter/: CMakeLists.txt  CrashReportDialog.cpp  main.cpp
src/crash_reporter/google-breakpad/client/windows/common/: ipc_protocol.h
src/crash_reporter/google-breakpad/client/windows/crash_generation/: client_info.cc  crash_generation_client.cc  crash_generation_client.h  crash_generation_server.cc  crash_generation_server.h  minidump_generator.cc
src/crash_reporter/google-breakpad/client/windows/handler/: exception_handler.cc  exception_handler.h
src/crash_reporter/ui/: CrashReportDialog.ui
src/dewarping/: CMakeLists.txt  CylindricalSurfaceDewarper.cpp  DepthPerception.cpp  DewarpingImageTransform.cpp  DistortionModelBuilder.cpp
src/filters/deskew/: CMakeLists.txt  Filter.h  ImageView.cpp  Params.cpp  RotationParams.cpp  Settings.cpp
src/filters/deskew/ui/: DeskewApplyDialog.ui
src/filters/fix_orientation/: CMakeLists.txt  Filter.h  Task.h
src/filters/fix_orientation/ui/: OrientationOptionsWidget.ui
src/filters/output/: CMakeLists.txt  DespeckleView.cpp  FillZoneEditor.cpp  Filter.cpp  Filter.h  OptionsWidget.cpp  OutputGenerator.cpp  OutputImageParams.cpp  PictureZoneEditor.cpp  Settings.cpp  Task.cpp
src/filters/output/ui/: OutputOptionsWidget.ui
src/filters/page_layout/: CMakeLists.txt  Filter.h  OptionsWidget.cpp
src/filters/page_layout/ui/: PageLayoutOptionsWidget.ui
src/filters/page_split/: CMakeLists.txt  Filter.h  ImageView.cpp  PageLayout.cpp
src/filters/page_split/ui/: PageSplitModeDialog.ui  PageSplitOptionsWidget.ui
src/filters/select_content/: CMakeLists.txt  ContentBoxFinder.cpp  DetectionMode.cpp  DetectionMode.h  Filter.h  ImageView.cpp  OptionsWidget.cpp  OptionsWidget.h  Params.cpp  Params.h  Settings.cpp  Settings.h  Task.cpp  Task.h
src/filters/select_content/ui/: SelectContentOptionsWidget.ui
src/foundation/: CMakeLists.txt  PriorityQueue.h  Proximity.cpp  ToPoint.h  ToVec.h  VecNT.h
src/imageproc/: CMakeLists.txt  GaussBlur.cpp  HoughTransform.h  PolynomialLine.cpp  PolynomialLine.h  PolynomialSurface.cpp  PolynomialSurface.h  SavGolKernel.cpp  SavGolKernel.h  imageproc_config.h
src/imageproc/tests/: CMakeLists.txt  TestAffineTransform.cpp  TestBinarize.cpp  TestConnCompEraser.cpp  TestGaussBlur.cpp  TestMorphology.cpp  TestOrthogonalRotation.cpp  TestReduceThreshold.cpp  TestSEDM.cpp  TestSavGolFilter.cpp  TestSavGolKernel.cpp  TestScale.cpp  TestSeedFill.cpp  TestSkewFinder.cpp
src/interaction/: CMakeLists.txt  InteractiveXSpline.cpp  InteractiveXSpline.h
src/math/: CMakeLists.txt  HomographicTransform.h  LinearFunction.h  PolylineIntersector.cpp  PolylineIntersector.h  QuadraticFunction.h  ToLineProjector.cpp  math_config.h
src/math/adiff/: Function.h  SparseMap.h
src/math/adiff/tests/: CMakeLists.txt  TestHessians.cpp
src/math/spfit/: FrenetFrame.h  Optimizer.cpp  Optimizer.h  SqDistApproximant.h
src/math/spfit/tests/: CMakeLists.txt  TestSqDistApproximant.cpp
src/tests/: CMakeLists.txt  TestContentSpanFinder.cpp  TestQtPolygonIntersection.cpp
src/zones/: CMakeLists.txt  ZoneContextMenuInteraction.cpp
tests/: CMakeLists.txt  TestMatrixCalc.cpp  TestSmartFilenameOrdering.cpp
zones/: ZoneContextMenuInteraction.cpp  ZoneInteractionContext.cpp
(+32 files in other folders)
